# rustops

./: .dockerignore  .gitignore  AGENTS.md  BUILD_REQUIREMENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  clippy.toml  config.yaml.example  deny.toml  docker-compose.yml  package-lock.json  package.json  rustfmt.toml  tailwind.config.js  tsconfig.json
.agentic-qe/: memory.db
.claude/: memory.db
.claude-flow/: CAPABILITIES.md  config.yaml  daemon-state.json
.claude-flow/metrics/: codebase-map.json  consolidation.json
.claude/helpers/: ddd-tracker.sh  guidance-hooks.sh
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  branch-protection-rules.yml  dependabot.yml  pull_request_template.md
.github/composite-actions/docker-build/: action.yaml
.github/composite-actions/helm-deploy/: action.yaml
.github/composite-actions/rust-build/: action.yaml
.github/workflows/: benchmarks.yml  ci.yml  dependencies.yml  docs.yml  main.yml  pr.yml  release.yml  security-scan.yml  strip-node-modules.yml  test.yml
.swarm/: memory.db  model-router-state.json  schema.sql  state.json
config/grafana/dashboards/: rustops-overview.json
config/grafana/provisioning/dashboards/: dashboards.yml
config/grafana/provisioning/datasources/: jaeger.yml  prometheus.yml
config/prometheus/: alerts.yml  prometheus.yml
crates/agent/: Cargo.toml
crates/agent/src/: main.rs
crates/anomaly/: Cargo.toml
crates/anomaly/src/: detector.rs  lib.rs  models.rs  router.rs  statistical.rs
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/common/: Cargo.toml
crates/common/benches/: event_bench.rs  metric_bench.rs
crates/common/src/: config.rs  error.rs  events.rs  ids.rs  lib.rs  telemetry.rs
crates/common/src/testing/: builders.rs  data.rs  mod.rs
crates/common/tests/: property_tests.rs
crates/incident/: Cargo.toml
crates/incident/src/: correlation.rs  deduplication.rs  events.rs  incident.rs  lib.rs  repository.rs
crates/integration/: Cargo.toml
crates/integration/examples/: prometheus_client.rs  prometheus_config.rs
crates/integration/src/: adapter.rs  circuit_breaker.rs  lib.rs  prometheus.rs  rate_limiter.rs  resilience.rs  retry.rs
crates/integration/src/infrastructure/: kubernetes.rs  mod.rs
crates/integration/src/itsm/: mod.rs  servicenow.rs
crates/integration/src/prometheus/: README.md
crates/integration/src/telemetry/: mod.rs  prometheus.rs
crates/integration/tests/: kubernetes_standalone.rs  prometheus_integration.rs
crates/knowledge/: Cargo.toml
crates/knowledge/src/: embeddings.rs  hnsw.rs  lib.rs  memory.rs  patterns.rs  repository.rs  runbooks.rs  sona.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: main.rs
crates/remediation/: Cargo.toml
crates/remediation/src/: activity.rs  error.rs  lib.rs  policy.rs  safety.rs  workflow.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: collector.rs  lib.rs  metrics.rs  normalizer.rs
crates/topology/: Cargo.toml
crates/topology/src/: discovery.rs  error.rs  events.rs  graph.rs  impact.rs  lib.rs  model.rs  query.rs  store.rs
crates/topology/tests/: integration_tests.rs
docker/: Dockerfile.agent  Dockerfile.api  Dockerfile.pipeline
docs/: IMPLEMENTATION_SUMMARY.md  MANUAL.md  SWARM_REPORT.md  TEST_SUITE_SUMMARY.md  VALIDATION.md  VALIDATION_FINAL.md  ci-cd.md
helm/rustops/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
helm/rustops/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  rbac.yaml  secret.yaml  service.yaml  serviceaccount.yaml
plans/adrs/: 0001-adr-template.md  0002-high-level-system-architecture.md  0003-microkernel-architecture.md  0004-event-driven-cqrs.md  0005-telemetry-pipeline-kafka.md  0006-anomaly-detection-onnx.md  0007-correlation-engine-design.md  0008-remediation-temporal.md  0009-service-topology-graph.md  0010-time-series-storage.md  0011-log-storage-clickhouse.md  0012-data-retention-tiering.md  0013-opentelemetry-integration.md  0017-tokio-async-runtime.md  0018-error-handling.md  0019-concurrency-patterns.md  0020-memory-management.md  README.md
plans/ddd/: BOUNDED_CONTEXTS_DESIGN.md  README.md  adr.md  diagrams.md
plans/ddd/src/: domain.rs
plans/development/: 01-monorepo-structure.md  02-cargo-workspace.md  03-testing-strategy.md  04-ci-cd-pipeline.md  05-quality-gates.md  06-documentation-standards.md  07-build-config.md  08-development-workflow.md  README.md
plans/integrations/: INDEX.md  README.md  api-contracts.md  aws-integration.md  datadog-integration.md  elasticsearch-integration.md  jira-integration.md  kubernetes-integration.md  pagerduty-integration.md  prometheus-integration.md  servicenow-integration.md  slack-integration.md
plans/memory/: ARCHITECTURE.md  IMPLEMENTATION.md  INTEGRATION.md  LEARNING.md  NAMESPACES.md
plans/performance/: README.md  SUMMARY.md  benchmark-plan.md  intelligent-sampling.md  profiling-guide.md  regression-prevention.md
plans/research/: agenticops.md
plans/roadmap/: 02-phase-1-foundation.md  03-phase-2-intelligence.md  04-phase-3-automation.md  05-phase-4-enterprise.md  06-claude-flow-integration.md  07-project-management.md  08-risk-register.md  09-gantt-timeline.md  README.md
plans/security/: 00-THREAT-MODEL.md  01-SECURITY-ARCHITECTURE.md  02-CVE-MITIGATION.md  03-SECURE-PATTERNS.md  04-SECURITY-CHECKLIST.md  05-COMPLIANCE-MATRIX.md  README.md
scripts/: integration-tests.sh  monitor-deployment.sh  setup-codespace.sh  smoke-tests.sh
tests/: docker-compose.yml
tests/fixtures/: prometheus.yml
tests/fixtures/events/: sample_events.json
tests/fixtures/logs/: sample_batch.json
tests/fixtures/metrics/: sample_batch.json
tests/integration/: common_tests.rs  mod.rs
tests/mocks/: http.rs  kafka.rs  mod.rs  prometheus.rs
