[workspace]
members = [
    "crates/common",
    "crates/telemetry",
    "crates/anomaly",
    "crates/incident",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["RustOps Team"]
license = "Apache-2.0"
repository = "https://github.com/rustops/rustops"

[workspace.dependencies]
# Async Runtime (compatible with rustc 1.70)
tokio = { version = "1.24", features = ["full"] }
async-trait = "0.1.71"

# Telemetry
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1"
thiserror = "1"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Statistics
ndarray = "0.15"
ndarray-stats = "0.5"

# Graph algorithms
petgraph = "0.6"

# Metrics / Prometheus
prometheus = { version = "0.13", features = ["process"] }

# Testing
proptest = "1.0"
criterion = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
