[workspace]
members = [
    "crates/common",
    "crates/telemetry",
    "crates/anomaly",
    "crates/incident",
    "crates/integration",
    "crates/topology",
    "crates/api",
    "crates/agent",
    "crates/pipeline",
]

[default-bin]
name = "rustops-api"
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["RustOps Team"]
license = "Apache-2.0"
repository = "https://github.com/rustops/rustops"

[workspace.dependencies]
# Async Runtime (compatible with rustc 1.70)
tokio = { version = "1.24", features = ["full"] }
async-trait = "0.1.71"

# Telemetry
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1"
thiserror = "1"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Statistics
ndarray = "0.15"
ndarray-stats = "0.5"

# Graph algorithms
petgraph = "0.6"

# Metrics / Prometheus
prometheus = { version = "0.13", features = ["process"] }

# Kubernetes
kube = { version = "0.87", features = ["runtime", "client", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }

# Graph database (Neo4j)
neo4rs = "0.8"

# HTTP/Async
reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "0.14", features = ["client", "http1", "tcp"] }

# Resilience
backoff = "0.4"
governor = { version = "0.6", features = ["std"] }
tokio-retry = "0.3"

# Testing
proptest = "1.10"
criterion = "0.4"
mockito = "1.0"
wiremock = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
