[package]
name = "rustops-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "API server for RustOps platform"

[dependencies]
rustops-common = { path = "../common" }
rustops-telemetry = { path = "../telemetry" }
rustops-anomaly = { path = "../anomaly" }
rustops-incident = { path = "../incident" }
rustops-integration = { path = "../integration" }
rustops-topology = { path = "../topology" }
tokio = { workspace = true }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
