[package]
name = "rustops-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Common utilities for RustOps"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
