[package]
name = "rustops-pipeline"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Event processing pipeline for RustOps"

[dependencies]
rustops-common = { path = "../common" }
rustops-telemetry = { path = "../telemetry" }
rustops-anomaly = { path = "../anomaly" }
rustops-incident = { path = "../incident" }
rustops-topology = { path = "../topology" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
kafka = "0.10"
uuid = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
