[package]
name = "rustops-remediation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Automated remediation engine with Temporal workflows"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Local dependencies
rustops-common = { path = "../common" }

# Kubernetes
kube = { version = "0.97", features = ["client", "runtime"], optional = true }
k8s-openapi = { version = "0.23", features = ["v1_29"], optional = true }

# Cloud providers
aws-config = { version = "1.5", features = ["behavior-version-latest"], optional = true }
aws-sdk-ec2 = { version = "1.57", optional = true }
aws-sdk-rds = { version = "1.52", optional = true }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
mockall = "0.13"
proptest = { workspace = true }
criterion = { workspace = true }

[features]
default = ["kubernetes"]
kubernetes = ["kube", "k8s-openapi"]
aws = ["aws-config", "aws-sdk-ec2", "aws-sdk-rds"]
full = ["kubernetes", "aws"]
