[package]
name = "rustops-topology"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async Runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# UUID
uuid = { workspace = true, features = ["v4", "serde"] }

# Time
chrono = { workspace = true, features = ["serde"] }

# Graph algorithms
petgraph = { workspace = true }

# Kubernetes client (use workspace versions)
kube = { workspace = true }
k8s-openapi = { workspace = true }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Futures
futures = "0.3"

# Config
config = "0.13"

# Resilience (use workspace versions)
backoff = { workspace = true }
governor = { workspace = true }
tokio-retry = { workspace = true }
hyper = { workspace = true }

# Tracing
tracing = { workspace = true }

# Common types
rustops-common = { path = "../common" }

# Graph database (optional - stubbed when not enabled)
neo4rs = { version = "0.8", optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
tempfile = "3"
proptest = { workspace = true }

[features]
default = []
# neo4j = ["neo4j"]  # Uncomment when neo4j dependency is added